--- a/config.env
+++ b/config.env
@@ -3,4 +3,4 @@ USER=egidijus
 DATABASE=mongodb+srv://egidijusnavic:<password>@cluster0.bqccdqu.mongodb.net/krepsinis?retryWrites=true&w=majority&appName=Cluster0
 DATABASE_PASSWORD=jiaaG5KeLQdTXYRD
 JWT_SECRET=mano-suo-toras-123
-JWT_EXPIRES_IN=5m
+JWT_EXPIRES_IN=30d
